--- a/package.json
+++ b/package.json
@@ -14,7 +14,6 @@
     "graphql": "^15.4.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
-    "react-infinite-scroll-hook": "^3.0.0",
     "react-lazy-load-image-component": "^1.5.1",
     "react-loading-skeleton": "^2.1.1",
     "react-router-dom": "^5.2.0",
@@ -44,5 +43,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@wojtekmaj/enzyme-adapter-react-17": "^0.4.1",
+    "enzyme": "^3.11.0"
   }
 }
