--- a/package.json
+++ b/package.json
@@ -45,7 +45,9 @@
     ]
   },
   "devDependencies": {
+    "@apollo/react-hooks": "^4.0.0",
     "@wojtekmaj/enzyme-adapter-react-17": "^0.4.1",
-    "enzyme": "^3.11.0"
+    "enzyme": "^3.11.0",
+    "react-test-renderer": "^17.0.1"
   }
 }
